Basic functionality and simple styling added.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Exploration Inspiration",
   "version": "1.0",
-  "description": "Inspiring creative thinking when running exploratory testing.",
+  "description": "Inspiring creative thinking when running exploratory QA testing.",
   "manifest_version": 2,
   "version": "1.0",
 
