Added some styling and another option at Emily's suggestion.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Exploration Inspiration",
+  "name": "Try...",
   "version": "1.0",
   "description": "Inspiring creative thinking when running exploratory QA testing.",
   "manifest_version": 2,
